--- a/api-interaction.css
+++ b/api-interaction.css
@@ -5,9 +5,8 @@ h3 {
 .letter_color {
   color: red;
 }
-body {
-  font-family: "Raleway", sans-serif;
-}
-.button {
-  background-color: dark red;
+
+.row {
+  font-size: 20px;
+  color: #800000;
 }
